--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,13 @@
     --menu-font-size: 18px;
     --body-font-size: 16px;
     --primary-color: rgb(170, 43, 64);
+    --secondary-color: #330c22;
     --unit-size: 8px;
+    --unit-size-xss: 4px;
+    --unit-size-xs: 16px;
+    --unit-size-s: 24px;
+    --unit-size-m: 32px;
+    --unit-size-l: 64px;
 }
 
 * {
@@ -13,11 +19,18 @@
 
 body  {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0 auto;
+    margin: var(--unit-size) auto;
     max-width: 800px;
     color: var(--text-color);
-    border: 3px solid #a20d44;
-   font-size: var(--body-font-size);
+    background-color: white;
+    border: 2px solid var(--primary-color);
+    font-size: var(--body-font-size);
+    padding: var(--unit-size) var(--unit-size-m);
+    line-height: 1.6;
+}
+
+html{
+    background-color: var(--secondary-color);
 }
 
 a {
@@ -27,11 +40,11 @@ a {
 }
 
 .link {
-    color: beige;
+    color: white;
     background-color: var(--primary-color);
     margin-left: var(--unit-size);
     margin-right: var(--unit-size);
-    padding: 4px 20px;
+    padding: var(--unit-size-xss) var(--unit-size-s);
     border-radius: 5px
 }
 
