--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
 }
 
 .wrapper {
-  min-width: 1000px;
+  min-width: 800px;
 }
 
 .main-links a:link {
@@ -97,19 +97,49 @@ div.photo-menu {
 
 .container {
   display: grid;
-  grid-gap: 40px;
+  grid-gap: 30px;
   grid-template-columns: repeat(3, 1fr);
 }
 
 .travelphoto {
-  height: 300px;
+  height: 350px;
   border-radius: 50%;
+  max-width: 70%;
 }
 
 .travelphoto:hover {
-  transform: scale(1.2);
+  utransform: scale(1.3);
 }
 
-.title1 {
-  background-color: azure;
+.blog-title {
+  position: absolute;
+  overflow: visible;
+}
+
+.blog-title p:hover {
+  opacity: 1;
+}
+.blog1 {
+  font-size: 30px;
+  font-style: oblique;
+  text-align: center;
+  opacity: 0;
+  position: absolute;
+  left: 160px;
+  top: 150px;
+  transform: translate(-50%, -50%);
+  color: rgb(253, 251, 251);
+  transition: 0.5s ease opacity;
+}
+.blog2 {
+  font-size: 30px;
+  font-style: oblique;
+  text-align: center;
+  opacity: 0;
+  position: absolute;
+  left: 600px;
+  top: 150px;
+  transform: translate(-50%, -50%);
+  color: rgb(253, 251, 251);
+  transition: 0.5s ease opacity;
 }
