--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,16 @@
 @import url("https://fonts.googleapis.com/css?family=Calligraffitti&display=swap");
 
+@viewport {
+  zoom: 1; /* same as initial-scale=1 */
+  width: device-width;
+}
+
+body,
+html {
+  margin: 0;
+  font-size: 100%;
+}
+
 :root {
   --text-color: hsl(0, 0%, 13%);
   --link-color: hsl(0, 0%, 13%);
@@ -38,108 +49,4 @@ body {
   background-color: var(--primary-color);
   font-size: var(--body-font-size);
   line-height: 2;
-}
-
-.wrapper {
-  min-width: 800px;
-}
-
-.main-links a:link {
-  color: black;
-  padding: 10px;
-}
-
-.main-links a:visited {
-  color: black;
-}
-
-.main-links a:hover {
-  background-color: var(--secondary-color);
-  border-radius: 15px;
-}
-
-.photo-logo {
-  width: 50%;
-  position: absolute;
-  top: 50px;
-}
-
-.contact img {
-  max-width: 30px;
-}
-.contact {
-  position: relative;
-  left: 1000px;
-  top: -50px;
-}
-
-div.photo-menu {
-  height: 25%;
-  max-width: 80%;
-  padding-left: 120px;
-  padding-top: 10px;
-  background-repeat: no-repeat;
-  background-color: var(--secondary-color);
-  position: relative;
-  left: 100px;
-  top: -45px;
-  border-radius: var(--unit-size-m);
-}
-
-.profile-photo {
-  height: 600px;
-  position: relative;
-  top: -40px;
-  margin-left: 30%;
-  flex: 50%;
-  border-radius: var(--unit-size-m);
-}
-
-.container {
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.travelphoto {
-  height: 350px;
-  border-radius: 50%;
-  max-width: 70%;
-}
-
-.travelphoto:hover {
-  utransform: scale(1.3);
-}
-
-.blog-title {
-  position: absolute;
-  overflow: visible;
-}
-
-.blog-title p:hover {
-  opacity: 1;
-}
-.blog1 {
-  font-size: 30px;
-  font-style: oblique;
-  text-align: center;
-  opacity: 0;
-  position: absolute;
-  left: 160px;
-  top: 150px;
-  transform: translate(-50%, -50%);
-  color: rgb(253, 251, 251);
-  transition: 0.5s ease opacity;
-}
-.blog2 {
-  font-size: 30px;
-  font-style: oblique;
-  text-align: center;
-  opacity: 0;
-  position: absolute;
-  left: 600px;
-  top: 150px;
-  transform: translate(-50%, -50%);
-  color: rgb(253, 251, 251);
-  transition: 0.5s ease opacity;
 }
