--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -3,21 +3,21 @@
   justify-content: center;
 }
 
-.main-links h2 {
+.mainlinks h2 {
   display: inline;
   padding: 5px;
 }
 
-.main-links a:visited {
+.mainlinks a:visited {
   color: black;
 }
 
-.main-links a:hover {
+.mainlinks a:hover {
   background-color: var(--secondary-color);
   border-radius: 30px;
 }
 
-.photo-logo {
+.photologo {
   width: 50%;
   position: absolute;
   top: 50px;
@@ -43,14 +43,14 @@
 .contact a:hover {
   transform: scale(2, 2);
 }
-div.photo-menu {
+div.photomenu {
   height: 10px;
   max-width: 100%;
   background-color: var(--secondary-color);
   border-radius: var(--unit-size-m);
 }
 
-.profile-photo {
+.profilephoto {
   border-radius: var(--unit-size-m);
 }
 
@@ -63,7 +63,7 @@ div.photo-menu {
   margin-bottom: 40px;
 }
 
-.contact-box {
+.contactbox {
   display: flex;
   flex-direction: column-reverse;
 }
