--- a/src/pages/travel/travel.module.css
+++ b/src/pages/travel/travel.module.css
@@ -1,3 +1,51 @@
-.container > a > p {
-  text-align: center;
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(100px, 1fr));
+  grid-gap: 30px;
+}
+
+.container > a {
+  display: flex;
+}
+
+.container > a div {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.container a:hover p {
+  opacity: 1;
+}
+
+.container a:hover img {
+  filter: brightness(50%);
+}
+
+.container > a p {
+  margin: 0;
+  align-self: center;
+  position: absolute;
+
+  font-size: 30px;
+  font-style: oblique;
+  opacity: 0;
+
+  color: rgb(242, 247, 248);
+  transition: 0.5s ease opacity;
+}
+
+.container > a::before {
+  content: "";
+  display: inline-block;
+  vertical-align: top;
+  padding-bottom: 100%;
+}
+
+.container img {
+  width: 100%;
+  filter: brightness(1);
+  border-radius: 100%;
+  object-fit: cover;
+  transition: 5 ease all;
 }
