--- a/src/pages/travel/travel.module.css
+++ b/src/pages/travel/travel.module.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(3, minmax(100px, 1fr));
+  grid-template-columns: repeat(4, minmax(100px, 1fr));
   grid-gap: 30px;
 }
 
@@ -43,7 +43,7 @@
 }
 
 .container img {
-  width: 100%;
+  max-width: 80%;
   filter: brightness(1);
   border-radius: 100%;
   object-fit: cover;
