--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ html {
   --body-font-size: 20px;
   --primary-color: white;
   --secondary-color: rgb(122, 216, 241);
+  --footer-color: rgb(39, 36, 36);
   --unit-size: 8px;
   --unit-size-xss: 4px;
   --unit-size-xs: 16px;
