--- a/src/components/page/page.module.css
+++ b/src/components/page/page.module.css
@@ -1,10 +1,11 @@
 .content {
   margin: 0 auto;
   width: 60rem;
-  flex: ;
+  flex: 1;
 }
 
 .wrapper {
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
