--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -1,10 +1,24 @@
 .wrapper-content {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 400px 1fr;
+
   padding-top: var(--unit-size-xs);
 }
 
 .profile-photo {
-  width: max-content;
+  width: 100%;
   border-radius: var(--unit-size-l);
+  padding-top: 30px;
+}
+
+p {
+  text-align: start;
+  padding-left: var(--unit-size-xs);
+}
+h1 {
+  justify-content: center;
+}
+
+.container img {
+  width: 50%;
 }
