--- a/src/components/feature-image/feature-image.module.css
+++ b/src/components/feature-image/feature-image.module.css
@@ -1,19 +1,20 @@
 .container {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(100px, 1fr));
-  grid-gap: 30px;
-}
-
-.container > a {
+  position: relative;
   display: flex;
-}
-
-.container > a div {
-  display: flex;
-  max-width: 96%;
   justify-content: center;
+  align-items: center;
 }
 
-.container a:hover p {
-  opacity: 1;
+.container p {
+  position: absolute;
+  margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: rgb(241, 241, 241);
+  font-size: 30px;
+}
+
+.container img {
+  filter: brightness(1);
+  width: 100%;
 }
