fix feature image and  font styles

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -6,8 +6,11 @@
   color: var(--primary-color);
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .footer small {
   padding: var(--unit-size-s);
+  align-items: center;
+  font-family: var(--secondary-header-font);
 }
