--- a/src/components/feature-image/feature-image.module.css
+++ b/src/components/feature-image/feature-image.module.css
@@ -5,16 +5,43 @@
   align-items: center;
 }
 
+.container:hover {
+  cursor: pointer;
+}
+
 .container p {
+  display: flex;
+  text-align: center;
   position: absolute;
   margin: 0;
+  padding: 0;
   text-overflow: ellipsis;
+
   white-space: nowrap;
-  color: rgb(241, 241, 241);
+  font-family: var(--primary-header-font);
+  font-weight: 500;
   font-size: 30px;
+  -webkit-text-stroke: 1px rgb(29, 28, 28);
+  color: rgb(247, 242, 242);
+  text-shadow: 3px 3px 0 rgb(32, 31, 31), -1px -1px 0 rgb(26, 25, 25),
+    1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.container:hover p {
+  opacity: 1;
 }
 
 .container img {
+  max-width: 100%;
   filter: brightness(1);
-  width: 100%;
+  border: 1px solid black;
+  border-radius: 10%;
+  object-fit: cover;
+  transition: 5 ease all;
+  transition: 0.25s ease filter;
+}
+
+.container:hover img {
+  filter: brightness(30%);
+  background-color: var(--primary-color);
 }
