--- a/src/pages/travel/travel.module.css
+++ b/src/pages/travel/travel.module.css
@@ -25,12 +25,17 @@
 
 .container > a p {
   margin: 0;
+  padding: 0;
   align-self: center;
   position: absolute;
-  font-size: 15px;
-  font-style: italic;
-  opacity: 0;
+  font-size: 20px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  opacity: 1;
   color: rgb(242, 247, 248);
+  -webkit-text-stroke: 1px black;
+  color: white;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
+    -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .container > a::before {
@@ -44,7 +49,8 @@
   max-width: 100%;
   filter: brightness(1);
   border: 1px solid black;
-  border-radius: 100%;
+  border-radius: 10%;
   object-fit: cover;
   transition: 5 ease all;
+  transition: 0.25s ease filter;
 }
