--- a/src/components/feature-image/feature-image.module.css
+++ b/src/components/feature-image/feature-image.module.css
@@ -10,20 +10,14 @@
 }
 
 .container p {
-  display: flex;
-  text-align: center;
   position: absolute;
   margin: 0;
-  padding: 0;
-  text-overflow: ellipsis;
-
-  white-space: nowrap;
+  padding: 20px;
   font-family: var(--primary-header-font);
-  font-weight: 500;
-  font-size: 30px;
-  -webkit-text-stroke: 1px rgb(29, 28, 28);
+  font-weight: 600;
+  font-size: 27px;
   color: rgb(247, 242, 242);
-  text-shadow: 3px 3px 0 rgb(32, 31, 31), -1px -1px 0 rgb(26, 25, 25),
+  text-shadow: 1px 1px 0 rgb(31, 32, 32), -1px -1px 0 rgb(26, 25, 25),
     1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
@@ -32,7 +26,8 @@
 }
 
 .container img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   filter: brightness(1);
   border: 1px solid black;
   border-radius: 10%;
