--- a/src/pages/about/about.module.css
+++ b/src/pages/about/about.module.css
@@ -1,5 +1,5 @@
 .wrapper-content {
-  padding-top: var(--unit-size-xs);
+  padding-top: var(--xs);
 }
 
 .profile-photo {
@@ -8,13 +8,13 @@
   padding-top: 30px;
 }
 
-p {
+.text {
   text-align: start;
-  padding-left: var(--unit-size-l);
+  padding-left: var(--l);
 }
 
 .introduction {
   display: grid;
   grid-template-columns: minmax(400px, 400px) 1fr;
-  grid-gap: var(--unit-size-s);
+  grid-gap: var(--s);
 }
