--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -16,7 +16,12 @@
 .post h3 {
   text-align: center;
 }
-
+.post :first {
+  font-size: 100px;
+  line-height: 70px;
+  font-family: var(--secondary-header-font);
+  color: var(--primary-color);
+}
 .post blockquote {
   border-left: 3px solid var(--primary-color);
   font-style: italic;
