--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -38,26 +38,21 @@
 }
 
 .favouritecities {
-  animation: slide 1.2s forwards;
-
-  transform: scale(2);
-  filter: blur(2px);
-
-  animation: slide 0.5s forwards;
+  transform: translateX(-100%);
+  filter: blur(1px);
+  opacity: 0;
+  animation: slide 1s forwards;
   animation-delay: 0.5s;
 }
 
 @keyframes slide {
   100% {
-    left: 0;
-  }
-}
-@keyframes slide {
-  to {
+    opacity: 1;
     filter: blur(0);
-    transform: scale(1);
+    transform: translateX(0);
   }
 }
+
 .city {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
