--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 
   border-bottom-style: inset;
 
@@ -15,8 +16,9 @@
 }
 
 .link {
+  /* look up ways to evade !important and make style load first*/
   position: relative;
-  display: flex;
+  display: flex !important;
   justify-content: center;
   align-items: center;
 }
