--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -16,12 +16,16 @@
 .post h3 {
   text-align: center;
 }
-.post :first {
-  font-size: 100px;
-  line-height: 70px;
-  font-family: var(--secondary-header-font);
+
+.post > p:first-of-type:first-letter {
+  font-size: 72px;
+  line-height: 48px;
+  font-family: var(--primary-header-font);
   color: var(--primary-color);
+  float: left;
+  padding: var(--xs);
 }
+
 .post blockquote {
   border-left: 3px solid var(--primary-color);
   font-style: italic;
