--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ html {
   --primary-font-size: 60px;
   --secondary-font-size: 20px;
   --body-font-size: 18px;
-  --primary-color: #7ad8f1;
+  --primary-color: #f1927a;
   --surface-color: white;
   --on-surface-color: hsl(0, 0%, 13%);
   --footer-color: rgb(39, 36, 36);
