--- a/src/components/feature-image/feature-image.module.css
+++ b/src/components/feature-image/feature-image.module.css
@@ -12,18 +12,12 @@
 .non-navigable:hover {
   cursor: default;
 }
+
 .title {
-  position: relative;
-}
-.container p {
   margin: 0;
   padding: 20px;
-  font-family: var(--primary-header-font);
-  font-weight: 600;
-  font-size: 27px;
   color: rgb(247, 242, 242);
-  text-shadow: 1px 1px 0 rgb(31, 32, 32), -1px -1px 0 rgb(26, 25, 25),
-    1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  position: absolute;
 }
 
 .container:hover p {
@@ -34,8 +28,7 @@
   width: 100%;
   height: 100%;
   filter: brightness(60%);
-  border: 1px solid black;
-  border-radius: 10%;
+  border-radius: 20px;
   object-fit: cover;
   transition: 5 ease all;
   transition: 0.25s ease filter;
