--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(46, 23, 151);
+  background-color: rgb(115, 23, 177);
   border-bottom-style: inset;
   z-index: 1;
   padding-top: var(--s);
@@ -14,11 +14,20 @@
 }
 
 .title {
+  font-size: var(--l);
   margin: 0;
   text-align: right;
   color: rgb(255, 250, 250);
+  flex-wrap: wrap;
+  text-align: center;
 }
 
+.subheading {
+  text-align: center;
+}
+h2 {
+  padding-left: var(--l);
+}
 .link {
   /* look up ways to evade !important and make style load first*/
   position: relative;
@@ -27,14 +36,6 @@
   align-items: center;
 }
 
-.photologo {
-  max-width: 800px;
-  position: absolute;
-  justify-content: left;
-  z-index: -1;
-  filter: sepia(56%) saturate(1514%) hue-rotate(724deg) brightness(72%)
-    contrast(170%);
-}
 .box {
   display: flex;
   flex-direction: row;
@@ -42,6 +43,7 @@
 .profile {
   min-width: 500px;
   min-height: 500px;
+  filter: brightness(130%);
 
   justify-content: right;
 }
