--- a/src/components/social-media-links/social-media-links.module.css
+++ b/src/components/social-media-links/social-media-links.module.css
@@ -1,8 +1,9 @@
 .contact img {
   max-width: 50px;
+  max-height: 50px;
   overflow: hidden;
   transition-duration: 0.5s;
-  border-radius: var(--large);
+  border-radius: var(--medium);
 }
 
 .contact {
