--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -4,6 +4,7 @@
 }
 
 .post img {
+  min-width: 40px;
   --factor: 1.4;
   width: calc(100% + var(--l) * 2 * var(--factor));
   margin: 0 calc(-1 * var(--l) * var(--factor));
