--- a/pages/posts/post.module.css
+++ b/pages/posts/post.module.css
@@ -6,10 +6,11 @@
 .post img {
   min-width: 40px;
   --factor: 1.4;
-  width: calc(100% + var(--l) * 2 * var(--factor));
+  width: 500px;
   margin: 0 calc(-1 * var(--l) * var(--factor));
   padding: var(--m);
   border-radius: 50px;
+  float: left;
 }
 
 .post h1,
@@ -59,7 +60,7 @@
 }
 
 .post blockquote + * {
-  clear: left;
+  clear: right;
 }
 
 .post blockquote > p {
