--- a/components/page/page.module.css
+++ b/components/page/page.module.css
@@ -18,3 +18,12 @@
   min-height: 100vh;
   position: relative;
 }
+
+.backarrow {
+  display: flex;
+  flex-direction: row;
+}
+.forwardarrow {
+  display: flex;
+  flex-direction: row-reverse;
+}
