--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -7,6 +7,16 @@
   padding-bottom: 0;
 }
 
+.left-arrow {
+  display: flex;
+  flex-direction: row;
+}
+
+.right-arrow {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
 .first-letter {
   font-size: 100px;
   line-height: 70px;
