--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -36,6 +36,7 @@
   justify-content: center;
 }
 .loader {
+  border: 1px solid white;
   margin-top: 25px;
   background-color: palevioletred;
   border-radius: 9999px;
